Sun Mar  7 17:38:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkbutton.c (gtk_button_class_init): actually use
	gtk_button_add.

	* gtk/gtkfilechooserdefault.c (error_building_filename_dialog):
	use the uri, not the path, #136317
	(renderer_edited_cb): ditto
	(shortcuts_add_bookmark_from_path): ditto
	(remove_bookmark_button_clicked_cb): ditto
	(gtk_file_chooser_default_remove_shortcut): ditto
	(update_from_entry): ditto
	(up_folder_handler): ditto

Sun Mar  7 16:07:08 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_init): set
	redraw_on_allocate, #135902.

	* gtk/gtkfilesystemmodel.c (model_refilter_recurse): Patch from
	Damon Chaplin to set a node to be visible before emitting the
	inserted signal, #135555.

Sun Mar  7 22:24:28 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkbutton.c (_gtk_button_paint): Don't use xthickness in the
	height calculation.

Sun Mar  7 14:34:04 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (trap_activate_cb): stop activate
	from unselecting rows when pressed in multiple-selection mode.

2004-03-07  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting) :
	some more settings from system, also reflect some name changes
	done a while ago in the x11 backend

	* gdk/win32/makefile.msc : build gdkspawn-win32.c

	* gtk/gtkdnd.c : gtk_drag_source_[gs]et_target_list, added "Since: 2.4"

	* gtk/makefile.msc.in : build gtkpathbar, link shell32.lib

	* tests/makefile.msc : some more tests get build

Sun Mar  7 03:03:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_get_paths): if action is
	SELECT_FOLDER, then return the currentd folder if none is
	selected.
	(gtk_file_chooser_default_should_respond): Allow 'Ok' to be hit if
	no directory is selected in SELECT_FOLDER mode.

Sat Mar  6 23:31:18 2004  Jonathan Blandford  <jrb@gnome.org>
